<resources>
    <string name="app_name">PrepPal</string>
    <string name="account">Account</string>
    <string name="back_button">Back button</string>
    <string-array name="submission_states">
        <item>Pending</item>
        <item>Pass</item>
        <item>Unpassed</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="question_1_3">Question 1/3</string>
    <string name="full_name">Full Name</string>
    <string name="option_3">Option 3</string>
    <string name="add_new_teacher">Add New Teacher</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="select_date_of_birth">Select Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="vocabularyTopicScreen">List of Vocabulary Topics</string>
    <string name="dictionaryScreen">Dictionary</string>
    <string name="add_teacher">Add Teacher</string>
    <string name="assignment">Assignment</string>
    <string name="ielts_skills_builder">IELTS Skills Builder</string>
    <string name="entry_level_5_0_5_5_target_level_6_0">Entry Level: 5.0 - 5.5 / Target Level: 6.0+</string>
    <string name="introduction">Introduction</string>
    <string name="in_this_course_you_will_learn_all_type_of_writing_skills_includes_charts_map_process_in_speaking_you_will_able_to_learn_about_environment_people">In this course, you will learn all type of writing skills includes Charts, Map, Process. In speaking, you will able to learn about environment, people.</string>
    <string name="welcome">Welcome</string>
    <string name="lesson_1_writing_task_1_dynamic_charts">Lesson 1: Writing Task 1 - Dynamic charts</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="log_in">Log In</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="course">Course</string>
    <string name="explore">Explore</string>
    <string name="my_courses">My Courses</string>
    <string name="test_set">Test Practices</string>
    <string name="vocab">Flashcard Vocabulary</string>
    <string name="view_more">View more</string>
    <string name="hello_current_user_s_name">Hello Current user\'s name</string>
    <string name="register_account">Register Account</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="confirm_password">Confirm password</string>
    <string name="retype_password">Retype password</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="previous">Previous</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="my_band_level">My band level</string>
    <string name="my_band_goal">My band goal</string>
    <string name="save">Save</string>
    <string name="band">Band:</string>
    <string name="account_information">Account information</string>
    <string name="courses">Courses</string>
    <string name="log_out">Log out</string>
    <string name="entry_level">Entry Level:</string>
    <string name="target_level">Target Level:</string>
    <string name="register">Register</string>
    <string name="complete">Complete</string>
    <string name="try_again">Try again!</string>
    <string name="word">word</string>
    <string name="enter_a_word">Enter a word...</string>
    <string name="mark_as_learned">Mark as learned</string>
    <string name="grading_test">Writing Quizzes</string>
    <string name="writing_topic">Writing Topic</string>
    <string name="writing_test_description">Writing test description</string>
    <string name="student_s_answer">Student\'s answer</string>
    <string name="teacher_comment">Teacher comment:</string>
    <string name="clear_comment">Clear comment</string>
    <string name="enter_comments_for_the_student">Enter comments for the student</string>
    <string name="grade_by_ai">Grade By AI</string>
    <string name="there_is_no_test_available">There is no test available.</string>
    <string name="language">Language</string>
    <string name="update">Update</string>
    <string name="you_can_change_the_language_as_per_your_usage_requirement">You can change the language as per your usage requirement.</string>
    <string name="test_set_list">Test set list</string>
    <string name="which_test_set_are_you_looking_for">Which test set are you looking for?</string>
    <string name="list_of_tests">List of tests</string>
    <string name="find_the_test">Find the test...</string>
    <string name="booking_schedule">Booking Schedule</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="join">JOIN</string>
    <string name="this_is_profile_page">This is Profile Page</string>
    <string name="end_call">End Call</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="waiting_for_call_speaker">Waiting for call co-speaker…</string>
    <string name="programme_ielts">Programme IELTS</string>
    <string name="start">start</string>/>
    <string-array name="genders">
        <item>MALE</item>
        <item>FEMALE</item>
        <item>OTHER</item>
    </string-array>

</resources>