<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F6FA"
    android:orientation="vertical">
    <!-- Header -->
    <FrameLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="60dp"
        android:paddingHorizontal="10dp">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@null"
            android:src="@drawable/ic_back_black"
            android:scaleType="fitCenter"
            android:padding="5dp"
            android:layout_gravity="start|center_vertical"
            android:contentDescription="@string/back_button" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:layout_marginLeft="40dp">
            <TextView
                android:id="@+id/courseLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entry_level_5_0_5_5_target_level_6_0"
                android:textSize="12sp"
                android:gravity="center"
                android:fontFamily="sans-serif-black"
                android:textColor="#A3A5A4"/>
            <TextView
                android:id="@+id/courseName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ielts_skills_builder"
                android:textSize="18sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="#ff0D0D0D"/>
        </LinearLayout>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/introduction"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-black" />
        <TextView
            android:id="@+id/txtIntroduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/in_this_course_you_will_learn_all_type_of_writing_skills_includes_charts_map_process_in_speaking_you_will_able_to_learn_about_environment_people"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="4"
                android:background="#E3E3E3"
                android:layout_marginVertical="20dp"
                android:orientation="horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginHorizontal="10dp"
                android:text="@string/welcome"
                android:textSize="12sp"
                android:textFontWeight="500"
                android:fontFamily="sans-serif-black"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="4"
                android:background="#E3E3E3"
                android:orientation="horizontal"/>
        </LinearLayout>

        <!--  Section List Recycler View -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewSections"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:paddingVertical="10dp"/>
    </LinearLayout>


</LinearLayout>