<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_20dp_white"
    android:padding="10dp"
    android:layout_marginHorizontal="20dp"
    android:layout_marginTop="20dp"
    android:orientation="vertical">
    <!-- Logo -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_20dp_container_course_payment"
        android:padding="10dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="3"
            android:src="@drawable/img_prep_gray"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:layout_marginLeft="20dp"
            android:text="PREP"
            android:textSize="80sp"
            android:textColor="#515151"
            android:textStyle="bold"/>
    </LinearLayout>
    <TextView
        android:id="@+id/courseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="IELTS practice package"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="sans-serif-black"
        android:textFontWeight="500"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/entryLevel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/entry_level"/>
        <TextView
            android:id="@+id/targetLevel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/target_level"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#E4E4E4"
        android:layout_marginVertical="10dp"/>

    <Button
        android:id="@+id/payBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_20dp_blue_sky"
        android:stateListAnimator="@null"
        android:layout_gravity="end"
        android:fontFamily="sans-serif-black"
        android:textColor="#578CF2"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textFontWeight="500"
        android:text="@string/register"/>
</LinearLayout>
